--- a/hamballer-game-starter/frontend/package.json
+++ b/hamballer-game-starter/frontend/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "vitest": "^0.34.6"
   },
   "keywords": ["react", "vite", "web3", "game", "tailwind"],
