--- a/hamballer-game-starter/frontend/package.json
+++ b/hamballer-game-starter/frontend/package.json
@@ -38,7 +38,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "@testing-library/react": "^14.0.0"
   },
   "keywords": ["react", "vite", "web3", "game", "tailwind"],
   "author": "HamBaller Team",
