--- a/hamballer-game-starter/contracts/package.json
+++ b/hamballer-game-starter/contracts/package.json
@@ -16,7 +16,8 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts": "^5.0.0",
     "hardhat": "^2.19.0",
-    "ethers": "^6.8.0"
+    "ethers": "^6.8.0",
+    "solc": "0.8.20"
   },
   "keywords": ["web3", "game", "nft", "erc20", "hardhat"],
   "author": "HamBaller Team",
