feat: mint XPBadge NFT on run completion

--- a/hamballer-game-starter/backend/.env.example
+++ b/hamballer-game-starter/backend/.env.example
@@ -21,6 +21,7 @@ PRIVATE_KEY=your_wallet_private_key_for_contract_interactions
 DBP_TOKEN_ADDRESS=0x...
 BOOST_NFT_ADDRESS=0x...
 HODL_MANAGER_ADDRESS=0x...
+XP_BADGE_ADDRESS=0x...
 
 # === WebSocket Configuration ===
 WS_PORT=3002
