--- a/hamballer-game-starter/backend/.env.example
+++ b/hamballer-game-starter/backend/.env.example
@@ -22,6 +22,7 @@ DBP_TOKEN_ADDRESS=0x...
 BOOST_NFT_ADDRESS=0x...
 HODL_MANAGER_ADDRESS=0x...
 XP_BADGE_ADDRESS=0x...
+XP_VERIFIER_ADDRESS=0x...
 
 # === WebSocket Configuration ===
 WS_PORT=3002
