--- a/hamballer-game-starter/frontend/package.json
+++ b/hamballer-game-starter/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "tailwind-merge": "^1.14.0",
+    "use-sound": "^4.0.1",
     "viem": "^1.15.0",
     "wagmi": "^1.4.0",
     "zustand": "^4.4.4"
