--- a/hamballer-game-starter/contracts/package.json
+++ b/hamballer-game-starter/contracts/package.json
@@ -2,6 +2,7 @@
   "name": "@hamballer/contracts",
   "version": "1.0.0",
   "description": "Smart contracts for HamBaller.xyz DODGE & HODL game",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "compile": "hardhat compile",
@@ -13,12 +14,34 @@
     "node": "hardhat node"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@openzeppelin/contracts": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/mocha": "^10.0.10",
+    "ethers": "^6.8.0",
     "hardhat": "^2.19.0",
-    "ethers": "^6.8.0"
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.16",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.8.3"
   },
-  "keywords": ["web3", "game", "nft", "erc20", "hardhat"],
+  "keywords": [
+    "web3",
+    "game",
+    "nft",
+    "erc20",
+    "hardhat"
+  ],
   "author": "HamBaller Team",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^17.2.0",
+    "thirdweb": "^5.105.16"
+  }
 }
