--- a/hamballer-game-starter/frontend/package.json
+++ b/hamballer-game-starter/frontend/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.3.0",
+    "@thirdweb-dev/chains": "^0.1.120",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "@wagmi/core": "^1.4.0",
     "clsx": "^2.0.0",
     "ethers": "^6.8.0",
